# wsdbtg

./: .env.example  Dockerfile  Makefile  README.md  cli.py  docker-compose.yml  pyproject.toml
.github/workflows/: deploy.yml
bot/: charts.py  db.py  handlers.py  logging.py  main.py  metrics.py  models.py  settings.py
bot/cli/: __init__.py  colors.py  explore.py  track.py
bot/handlers/: admin.py  common.py  context.py  text.py  upload.py
bot/parsers/: __init__.py  common.py  fit.py  gpx.py  tcx.py
bot/web/: server.py
bot/web/static/: index.html
scripts/: check_env.py
tests/: conftest.py  test_env_sync.py  test_handlers.py
tests/handlers/: test_admin.py  test_common.py  test_text.py  test_upload.py
tests/parsers/: test_fit.py  test_gpx.py  test_parse.py  test_tcx.py
